# kuflow-robotframework

./: .gitignore  CONTRIBUTING.md  README.md  README.rst  kuflow_rest_client_README.md  package-lock.json  package.json  pyproject.toml
.openapi-generator/: FILES
etc/: openapi-min.yaml  openapi-new.yaml  openapi.yaml
etc/licenseheaders/: custom-settings.json
examples/: test_task_actions_save_element.py  test_task_actions_save_element_document.py  test_task_actions_save_elements.py
examples/api/: task_actions_append_log.py  task_actions_delete_element.py  task_actions_delete_element_document.py  task_actions_save_element.py  task_actions_save_element_document.py  task_actions_save_elements.py
examples/robot/: one.robot
kuflow_rest_client/: api_client.py  configuration.py  schemas.py
kuflow_rest_client/api/: __init__.py  authentication_api.py  process_api.py  task_api.py
kuflow_rest_client/apis/: __init__.py
kuflow_rest_client/docs/: AssignTaskCommand.md  Authentication.md  AuthenticationAllOf.md  AuthenticationApi.md  AuthenticationType.md  ElementDefinitionType.md  Page.md  PageMetadata.md  Process.md  ProcessAllOf.md  ProcessApi.md  ProcessDefinitionSummary.md  ProcessElementValue.md  ProcessPage.md  ProcessPageAllOf.md  ProcessState.md  TaskApi.md  TaskPage.md  TaskPageAllOf.md  WebhookEvent.md  WebhookEventProcessStateChanged.md  WebhookEventProcessStateChangedAllOf.md  (+5 more)
src/: kuflow_rest_client_README.md
tests/: test_authentication.py  test_kuflow_rest_client.py  test_kuflow_robotframework.py  test_task_actions_append_log.py  test_task_actions_save_element.py  test_task_actions_save_element_document.py
tests_manual/: test_task_actions_append_log.py  test_task_actions_save_element.py
(+140 files in other folders)
