[tool.poetry]
name = "kuflow-rest-client"
version = "0.1.0"
description = ""
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
black = "22.3.0"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
